syntax = "proto3";

package receiving;

service Receiving {
    rpc Send(Request) returns (Reply) {}
}

message User {
    string id = 1;
    string name = 2;
}

message Request {
    string id = 1;
    string source = 2;
    User bot = 3;
    User author = 4;
    string channelId = 5;
    string serverId = 6;
    repeated User mentions = 7;
    string content = 8;
}

message Reply {
    string id = 1;
}
